bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: unclosed character literal
var lecture: String='';
                    ^BDR:2: error: illegal start of simple expression
var lecture: String='';
                    ^BDR:3: error: ';' expected but '=' found.
val site: List[String] = List("R","L","I","A","B","C","Z","Y","X");
                       ^